--- a/app/src/main/res/layout/activity_partdetails.xml
+++ b/app/src/main/res/layout/activity_partdetails.xml
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:text="Used bike"
                     android:textSize="20sp"
-                    android:textColor="#6A6A6A"
+                    android:textColor="#000000"
                     android:layout_marginEnd="5dp"
                     android:textAlignment="center"
                     android:fontFamily="@font/lalezar_regular"
@@ -97,7 +97,7 @@
                     android:id="@+id/vertical_line1"
                     android:layout_width="2dp"
                     android:layout_height="match_parent"
-                    android:background="#808080"
+                    android:background="#000000"
                     android:layout_marginEnd="5dp" />
 
                 <TextView
@@ -106,7 +106,7 @@
                     android:layout_height="wrap_content"
                     android:text="Total distance for this part"
                     android:textSize="20sp"
-                    android:textColor="#6A6A6A"
+                    android:textColor="#000000"
                     android:textAlignment="center"
                     android:fontFamily="@font/lalezar_regular"
                     />
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/parts_text_button_layout"
+                    android:id="@+id/service_text_button_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="0dp"
@@ -142,24 +142,24 @@
                     tools:ignore="HardcodedText">
 
                     <TextView
-                        android:id="@+id/parts_text"
+                        android:id="@+id/services_text"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="20dp"
                         android:fontFamily="@font/lalezar_regular"
                         android:gravity="center"
-                        android:text="Parts"
+                        android:text="Services"
                         android:textAlignment="center"
                         android:textColor="#000000"
                         android:textSize="30sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/add_parts_button"
+                        app:layout_constraintEnd_toStartOf="@id/add_service_button"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
-                        android:id="@+id/add_parts_button"
+                        android:id="@+id/add_service_button"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="15dp"
@@ -168,7 +168,7 @@
                         android:scaleType="fitCenter"
                         android:src="@drawable/parts_adding_button"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toEndOf="@id/parts_text"
+                        app:layout_constraintStart_toEndOf="@id/services_text"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintVertical_bias="0.5" />
 
@@ -177,13 +177,13 @@
 
                 <!-- Alkatrészek RecyclerView -->
                 <androidx.recyclerview.widget.RecyclerView
-                    android:id="@+id/recycler_view_parts"
+                    android:id="@+id/recycler_view_services"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/parts_text_button_layout"
+                    app:layout_constraintTop_toBottomOf="@id/service_text_button_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:scrollbars="none"/>
@@ -195,7 +195,7 @@
                     android:layout_height="2dp"
                     android:layout_marginTop="16dp"
                     android:background="#808080"
-                    app:layout_constraintTop_toBottomOf="@id/recycler_view_parts"
+                    app:layout_constraintTop_toBottomOf="@id/recycler_view_services"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintWidth_percent="0.9" />
