--- a/app/src/main/res/layout/activity_partdetails.xml
+++ b/app/src/main/res/layout/activity_partdetails.xml
@@ -61,7 +61,7 @@
 
             <TextView
                 android:id="@+id/part_name_text_view"
-                android:layout_width="270dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Part name"
                 android:textSize="30sp"
@@ -90,7 +90,7 @@
                     android:textColor="#000000"
                     android:layout_marginEnd="5dp"
                     android:textAlignment="center"
-                    android:fontFamily="@font/lalezar_regular"
+                    android:fontFamily="@font/averagesans_regular"
                     />
 
                 <View
@@ -108,7 +108,7 @@
                     android:textSize="20sp"
                     android:textColor="#000000"
                     android:textAlignment="center"
-                    android:fontFamily="@font/lalezar_regular"
+                    android:fontFamily="@font/averagesans_regular"
                     />
 
             </LinearLayout>
