--- a/app/src/main/res/layout/activity_serviceadding.xml
+++ b/app/src/main/res/layout/activity_serviceadding.xml
@@ -110,7 +110,21 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="35dp"
             app:layout_constraintStart_toEndOf="@id/repeat_text_view"
-            app:layout_constraintTop_toBottomOf="@id/value_edit_text" />
+            app:layout_constraintTop_toBottomOf="@id/value_edit_text"
+            tools:ignore="UseSwitchCompatOrMaterialXml" />
+
+        <ImageButton
+            android:id="@+id/submit_service_interval_button"
+            android:layout_width="150dp"
+            android:layout_height="70dp"
+            android:background="@null"
+            android:contentDescription="manual_ride_adding_button_submit"
+            android:scaleType="fitCenter"
+            android:src="@drawable/submitbutton"
+            android:layout_marginTop="50dp"
+            app:layout_constraintTop_toBottomOf="@id/repeat_switch"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
