--- a/app/src/main/res/layout/item_serviceintervals.xml
+++ b/app/src/main/res/layout/item_serviceintervals.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardCornerRadius="17dp"
     app:cardElevation="0dp"
     android:layout_margin="7dp"
@@ -16,26 +16,32 @@
         android:orientation="vertical">
 
         <TextView
-            android:id="@+id/part_name_text_view"
+            android:id="@+id/service_interval_name_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Part Name"
+            android:text="Service interval name"
             android:textSize="20sp"
             android:fontFamily="@font/averagesans_regular"
             android:textStyle="bold"
             android:textColor="#000000"
+            android:layout_marginStart="10dp"/>
+
+        <TextView
+            android:id="@+id/service_interval_valuekm_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Service interval value km left"
+            android:textSize="16sp"
+            android:fontFamily="@font/averagesans_regular"
             android:layout_marginStart="10dp" />
 
         <TextView
-            android:id="@+id/part_distance_text_view"
+            android:id="@+id/last_service_interval_date_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Total Distance"
-            android:textSize="15sp"
+            android:text="Repeat: Yes/No"
+            android:textSize="16sp"
             android:fontFamily="@font/averagesans_regular"
-            android:textColor="#000000"
             android:layout_marginStart="10dp" />
-
     </LinearLayout>
-
 </androidx.cardview.widget.CardView>
