--- a/app/src/main/res/layout/item_serviceintervals.xml
+++ b/app/src/main/res/layout/item_serviceintervals.xml
@@ -10,38 +10,74 @@
     app:cardBackgroundColor="#33FF4B00"
     tools:ignore="HardcodedText">
 
-    <LinearLayout
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-        <TextView
-            android:id="@+id/service_interval_name_textview"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/service_interval_card_layout"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="Service interval name"
-            android:textSize="20sp"
-            android:fontFamily="@font/averagesans_regular"
-            android:textStyle="bold"
-            android:textColor="#000000"
-            android:layout_marginStart="10dp"/>
+            android:orientation="vertical"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/more_button_layout"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:padding="10dp">
 
-        <TextView
-            android:id="@+id/service_interval_valuekm_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="000km of 000km left"
-            android:textSize="16sp"
-            android:fontFamily="@font/averagesans_regular"
-            android:layout_marginStart="10dp" />
+            <TextView
+                android:id="@+id/service_interval_name_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/averagesans_regular"
+                android:text="Service interval name"
+                android:textColor="#000000"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/last_service_interval_date_textview"
+            <TextView
+                android:id="@+id/service_interval_valuekm_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/averagesans_regular"
+                android:text="000km of 000km left"
+                android:textSize="16sp"
+                android:textColor="@color/black" />
+
+            <TextView
+                android:id="@+id/last_service_interval_date_textview"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/averagesans_regular"
+                android:text="Last serviced on 0000.00.00., at 00:00 after 000km"
+                android:textSize="16sp"
+                android:textColor="@color/black" />
+        </LinearLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/more_button_layout"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Last serviced on 0000.00.00., at 00:00 after 000km"
-            android:textSize="16sp"
-            android:fontFamily="@font/averagesans_regular"
-            android:layout_marginStart="10dp" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            app:layout_constraintStart_toEndOf="@id/service_interval_card_layout"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            >
+
+            <ImageButton
+                android:id="@+id/more_button"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@null"
+                android:contentDescription="more_button"
+                android:scaleType="fitCenter"
+                android:src="@drawable/more_button"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
