--- a/app/src/main/res/layout/activity_partdetails.xml
+++ b/app/src/main/res/layout/activity_partdetails.xml
@@ -132,7 +132,7 @@
                 android:layout_height="wrap_content">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
-                    android:id="@+id/service_text_button_layout"
+                    android:id="@+id/service_intervals_text_button_layout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:padding="0dp"
@@ -154,12 +154,12 @@
                         android:textSize="30sp"
                         android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@id/add_service_button"
+                        app:layout_constraintEnd_toStartOf="@id/add_service_interval_button"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageButton
-                        android:id="@+id/add_service_button"
+                        android:id="@+id/add_service_interval_button"
                         android:layout_width="45dp"
                         android:layout_height="45dp"
                         android:layout_marginStart="15dp"
@@ -183,12 +183,11 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginEnd="20dp"
                     android:layout_marginStart="20dp"
-                    app:layout_constraintTop_toBottomOf="@id/service_text_button_layout"
+                    app:layout_constraintTop_toBottomOf="@id/service_intervals_text_button_layout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:scrollbars="none"/>
 
-                <!-- Harmadik vízszintes elválasztó vonal -->
                 <View
                     android:id="@+id/horizontal_line1"
                     android:layout_width="0dp"
@@ -200,7 +199,66 @@
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintWidth_percent="0.9" />
 
-                <!-- "Rides" szekció -->
+                <LinearLayout
+                    android:id="@+id/services_text_button_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:layout_marginTop="15dp"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/horizontal_line1"
+                    app:layout_constraintBottom_toTopOf="@id/recycler_view_services">
+
+                    <TextView
+                        android:id="@+id/services_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="20dp"
+                        android:fontFamily="@font/lalezar_regular"
+                        android:gravity="center"
+                        android:text="Services"
+                        android:textAlignment="center"
+                        android:textColor="#000000"
+                        android:textSize="30sp"
+                        android:textStyle="bold" />
+
+                    <ImageButton
+                        android:id="@+id/add_service_button"
+                        android:layout_width="45dp"
+                        android:layout_height="45dp"
+                        android:layout_marginStart="15dp"
+                        android:background="@null"
+                        android:contentDescription="Parts_adding_button"
+                        android:scaleType="fitCenter"
+                        android:src="@drawable/parts_adding_button" />
+
+                </LinearLayout>
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recycler_view_services"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginStart="20dp"
+                    app:layout_constraintTop_toBottomOf="@id/services_text_button_layout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:scrollbars="none"/>
+
+                <View
+                    android:id="@+id/horizontal_line2"
+                    android:layout_width="0dp"
+                    android:layout_height="2dp"
+                    android:layout_marginTop="16dp"
+                    android:background="#808080"
+                    app:layout_constraintTop_toBottomOf="@id/recycler_view_services"
+                    app:layout_constraintBottom_toTopOf="@id/rides_text_button_layout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintWidth_percent="0.9" />
+
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/rides_text_button_layout"
                     android:layout_width="match_parent"
@@ -208,7 +266,7 @@
                     android:layout_marginTop="15dp"
                     android:padding="0dp"
                     tools:ignore="HardcodedText"
-                    app:layout_constraintTop_toBottomOf="@id/horizontal_line1">
+                    app:layout_constraintTop_toBottomOf="@id/horizontal_line2">
 
                     <TextView
                         android:id="@+id/rides_text"
