--- a/app/src/main/res/layout/activity_serviceintervaladding.xml
+++ b/app/src/main/res/layout/activity_serviceintervaladding.xml
@@ -38,7 +38,8 @@
             android:gravity="center"
             android:text="New service interval"
             android:textColor="@color/black"
-            android:textSize="25sp" />
+            android:textSize="25sp"
+            android:textStyle="bold" />
 
     </LinearLayout>
 
