--- a/app/src/main/res/layout/activity_partdetails.xml
+++ b/app/src/main/res/layout/activity_partdetails.xml
@@ -129,7 +129,8 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/dashboard"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/service_intervals_text_button_layout"
